# track-ma-ballot

./: .env.sample  .gitignore  LICENSE  README.md  pytest.ini  setup.cfg  tasks.py
.github/workflows/: main.yml
src/: track_ma_ballot.py
tests/: test_ballot_status.py
