[metadata]
name = track_ma_ballot

[options]
packages =
    find:
package_dir =
    =src
install_requires =
    playwright
    environ-config
    python-dotenv

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    invoke
    isort
    mypy
    pep8-naming
    pytest
    pytest-cov
    pytest-playwright

[options.packages.find]
where = src
